--- a/Frontend/Pages/Event/EditEventManagement.razor
+++ b/Frontend/Pages/Event/EditEventManagement.razor
@@ -55,6 +55,14 @@ else
 {
     <p>Error fetching event details.</p>
 }
+    @if (!string.IsNullOrEmpty(errorMessage) && string.IsNullOrEmpty(sucessMessage))
+    {
+        <div class="alert alert-danger">@errorMessage</div>
+    }
+    @if (string.IsNullOrEmpty(errorMessage) && !string.IsNullOrEmpty(sucessMessage))
+    {
+        <div class="alert alert-success">@sucessMessage</div>
+    }
 
 @code {
     private UpdateEventModel eventToEdit;
@@ -64,6 +72,8 @@ else
     private string userEmail;
     [Parameter]
     public string EventId { get; set; }
+    private string errorMessage;
+    private string sucessMessage;
 
     protected override async Task OnInitializedAsync()
     {
@@ -71,17 +81,17 @@ else
         await GetCategories();
         token = await localStorage.GetItemAsync<string>("token");
 
-    // Decodificar o token e extrair as informações do usuário
+        // Descodificar o token e extrair as informações do utilizador
         var tokenHandler = new JwtSecurityTokenHandler();
         var decodedToken = tokenHandler.ReadJwtToken(token);
 
-    // Extrair o email do usuário
+        // Extrair o email do utilizador
         userEmail = decodedToken.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Email)?.Value;
 
-    // Obter o ID do usuário com base no email
+        // Obter o ID do utilizador com base no email
         userId = await GetUserIdByEmail(userEmail);
 
-    // Atribuir o valor do userId ao Organizer_ID
+        // Atribuir o valor do userId ao Organizer_ID
         eventToEdit.Organizer_ID = userId;
     }
 
@@ -148,7 +158,8 @@ else
         }
         else
         {
-            Console.WriteLine("Failed to update event.");
+            errorMessage = "Failed to update Event.";
+            sucessMessage = null;
         }
     }
 }
