--- a/Frontend/Pages/Register.razor
+++ b/Frontend/Pages/Register.razor
@@ -2,6 +2,8 @@
 @using Blazored.LocalStorage
 @using Frontend.Models.User
 @using System.Net.Http.Json
+@using Frontend.Models
+@using System.Net.Http.Headers
 
 @inject ILocalStorageService localStorage
 @inject HttpClient httpClient
@@ -34,10 +36,21 @@
         <label for="phone">Phone:</label>
         <input id="phone" class="form-control" @bind="registerModel.Phone" />
     </div>
-
     <div class="form-group">
-        <button class="btn btn-primary" @onclick="HandleRegisterAsync">Register</button>
+        <label for="role">Role:</label>
+        <select id="role" class="form-control" @bind="registerModel.Role_id">
+            @foreach (var role in roles)
+            {
+                if (role.Name == "User")
+                {
+                    <option value="@role.ID">@role.Name</option>
+                }
+            }
+        </select>
     </div>
+    <div class="form-group mt-5">
+            <button class="btn btn-primary" @onclick="HandleRegisterAsync">Register</button>
+        </div>
 
     <div class="form-group">
         <p>Already have an account? <a href="/">Login here</a></p>
@@ -52,10 +65,28 @@
 @code {
     private CreateUserModel registerModel = new CreateUserModel();
     private string ErrorMessage;
+    private List<RoleModel> roles;
+       
+    protected override async Task OnInitializedAsync()
+    {
+        await GetRoles();
+    }
+    
+    private async Task GetRoles()
+    {
+        var token = await localStorage.GetItemAsync<string>("token");
+        httpClient.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("Bearer", token);
 
+        var response = await httpClient.GetAsync("http://localhost:5052/api/User/GetRoles");
+
+        if (response.IsSuccessStatusCode)
+        {
+            roles = await response.Content.ReadFromJsonAsync<List<RoleModel>>();
+        }
+    }
+    
     private async Task HandleRegisterAsync()
     {
-        registerModel.Role_id = new Guid("49e60d03-d156-4a83-bfe6-da8db3c77e85"); // Set the role_id to "USER"
 
         var response = await httpClient.PostAsJsonAsync("http://localhost:5052/api/User/registration", registerModel);
 
